# MIDORI

./: .editorconfig  .gitignore  AGENTS.md  LEGAL.md  LICENSE  PRIVACY.md  README.md  TERMS-OF-USE.md  TRADEMARKS.md  midori.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: BRANCHING.md  PROJECT_STRUCTURE.md  compiler.md  reference.md  roadmap-v0.2.0.md  tour.md
examples/: README.md  advanced_pipeline.mdr  borrow_rules.mdr  custom_errors_raise.mdr  fib.mdr  hello.mdr  match_enum.mdr  option_result.mdr
installer/windows/: README.md  build-installer-v0.1.0.ps1  build-installer-v0.2.0.ps1  build-installer-v0.2.1.ps1  build-installer-v0.2.2.ps1  build-installer-v020.ps1  build-installer.ps1  midori-v0.1.0.iss  midori-v0.2.0.iss  midori-v0.2.1.iss  midori-v0.2.2.iss  midori.iss
midori-docs/: .gitignore  README.md  package-lock.json  package.json
src/: main.mdr  math.mdr
src/midori_cli/: formatter.py  main.py  pipeline.py  terminal.py
src/midori_codegen_llvm/: codegen.py
src/midori_compiler/: ast.py  errors.py  lexer.py  parser.py  span.py  token.py
src/midori_ir/: borrow.py  lowering.py  mir.py
src/midori_typecheck/: checker.py  resolver.py  types.py
tests/: ast_dump.py  test_borrow.py  test_cli.py  test_codegen_layout.py  test_diagnostics_v020.py  test_formatter.py  test_integration_compile_run.py  test_integration_v020.py  test_lexer.py  test_parser.py  test_project_modules.py  test_scaffold.py  test_terminal.py  test_typecheck.py  test_vscode_keyword_sync.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json
(+49 files in other folders)
